sass/old-pmx-temp.scss
---
---

*::before,
*::after {
  font-family: 'pmx';
}

body {
  min-width: 993px;
  background-color: #4692C3;
  font-size: 14px;
}

.pagebody-container {
  background-color: #4692C3;
}

.tabline {
  // background-color: #2C5386;
  background-color: #285C9E;
}

// .tabline .tab-scroller ul.tabs li.tab:before {
//   border-top: 15px solid #2C5386;
// }
.tabline .tab-scroller ul.tabs li.tab.tab-fixed {
  // border-top: 2px solid #2C5386;
  border-top: 2px dotted #285C9E;
}
.tabline .tab-scroller ul.tabs li.tab {
  background-color: #22508A;
}

.tabline .tab-scroller ul.tabs li.tab.tab-selected {
  background-color: #4692C3;
}

.old-multiselect-popup, .old-multiselect-tab {
  display: block !important;
}

.old-multiselect-popup--hidden, .old-multiselect-tab--hidden {
  display: none !important;
}

.old-pmx-filter tr {
  background-color: #E6E6E6 !important;
}

.old-multiselect-popup #tabs ul li {
  background-color: transparent !important;
  width: 1% !important;
}

.old-multiselect-popup #tabs {
  margin: -10px;
  margin-bottom: unset;
}

.old-multiselect-tab-negative span.checked:before, .old-multiselect-tab-negative span.checked:hover:before {
  color: red;
}

sup {
  padding-left: 5px;
}
.selected sup {
  display: none;
}

